--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/logo1.png" />
     <title>Netflix India – Watch TV Shows Online, Watch Movies Onlincument</title>
@@ -18,7 +19,7 @@
             <div class="nav">
                 <img src="assets/logo.png">
                 <select name="language" id="language">
-                    <option value="Eng">English</option>
+                    <option value="Eng"><i class="fa-solid fa-language"></i> English</option>
                     <option value="hin">Hindi</option>
                 </select>
                 <button type="button" id="button">Sign in</button>
@@ -29,8 +30,17 @@
             <input type="text" placeholder="Email address" required />
             <button type="submit" class="get">Get Started > </button>
         </div>
-
     </div>
+   <hr>
+   <div class="tv">
+    <div class="tv-text">
+        <h1>Enjoy on your TV</h1>
+        <p>Watch on smart TV's, PlayStation Xbox,<br> Chromecast, Apple TV, Blu-ray players and<br> more.</p>
+    </div>
+    <div class="tv-img">
+        <img src="assets/tv.png" alt="Tv image" />
+    </div>
+   </div>
 </body>
 
 </html>
