Currently Working on this project

--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
         <img src="assets/tv.png" alt="Tv image" />
     </div>
    </div>
+   <hr>
+   <div class="mob-container">
+    <div class="mob-img"><img src="assets/mobile.jpg" alt="mobile pic" /></div>
+    <div class="mob-text">
+        <h1>Download your <br> shows to watch <br>offline</h1>
+        <p>Save your favourites easily and always have<br> something to watch.</p>
+    </div>
+   </div>
+   <hr>
+   <div class="desktop">
+    <div class="desktop-text">
+        <h1>Watch everywhere</h1>
+        <p>Stream unlimited movies and TV shows on<br> your phone,tablet,laptop and TV.</p>
+    </div>
+    <div class="desktop-img"><img src="assets/monitor.png" alt="Monitor image"></div>
+   </div>
+   <hr>
+   <div class="kid">
+    <div class="kid-img"><img src="assets/children.png" alt="Children picture"></div>
+    <div class="kid-text">
+        <h1>Create profiles for <br> kids</h1>
+        <p>Send children on adventures with their <br> favourite characters in a spacee made just <br> for them-free with your membership.</p>
+    </div>
+   </div>
+   <hr>
 </body>
 
 </html>
